<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            android:layout_marginTop="@dimen/margin_padding_large"
            android:contentDescription="@null"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toStartOf="@+id/textViewTitle"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_cmmc_logo" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_padding_small"
            android:text="@string/chiang_mai_maker_club"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewLogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/imageViewLogo"
            app:layout_constraintTop_toTopOf="@+id/imageViewLogo" />

        <Button
            android:id="@+id/buttonConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_large"
            android:text="@string/connect"
            app:layout_constraintStart_toStartOf="@+id/buttonOn"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

        <Button
            android:id="@+id/buttonOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_padding"
            android:enabled="false"
            android:text="@string/off"
            app:layout_constraintBottom_toBottomOf="@+id/buttonOn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/buttonOn"
            app:layout_constraintTop_toTopOf="@+id/buttonOn" />

        <Button
            android:id="@+id/buttonOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_large"
            android:enabled="false"
            android:text="@string/on"
            app:layout_constraintEnd_toStartOf="@+id/buttonOff"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonConnect" />

        <TextView
            android:id="@+id/textViewStatus"
            android:layout_width="@dimen/text_area_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_large"
            android:layout_marginBottom="@dimen/margin_padding_large"
            android:text="@string/hello_from_cmmc"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonOn" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>